# retrospector

./: Cargo.toml  LICENSE  readme.markdown
.github/workflows/: release.yml
src/: lib.rs  main.rs  systems.rs
src/output/: cue.rs  dat.rs  mod.rs
src/systems/: atari.rs  cdi.rs  colecovision.rs  dreamcast.rs  fds.rs  gameboy.rs  gamecom.rs  gamecube.rs  gba.rs  helpers.rs  intellivision.rs  iso.rs  jaguar.rs  n64.rs  nds.rs  nes.rs  odyssey2.rs  playstation.rs  registry.rs  saturn.rs  segacd.rs  sms.rs  snes.rs  virtualboy.rs  wii.rs
src/systems/atari/: a2600.rs  a5200.rs  a7800.rs  lynx.rs
src/systems/disc/: mod.rs  nintendo_disc.rs  pvd.rs  sector.rs  sega_ip.rs
src/systems/fds/: licensee.rs
src/systems/gameboy/: licensee.rs
src/systems/genesis/: mod.rs  publisher.rs
src/systems/nds/: licensee.rs
src/systems/nes/: analysis.rs  console_type.rs  expansion_device.rs  file_type.rs  mapper.rs  mirror_type.rs  timing.rs
src/systems/odyssey2/: opcodes.rs
src/systems/snes/: detection.rs
src/traits/: error.rs  mod.rs  rom_hash.rs  rominfo.rs  stored_checksum.rs  title.rs
