[package]
name = "retrospector"
version = "1.0.2"
authors = ["Pat Hawks <pat@pathawks.com>"]
description = "Retro game ROM checksum verifier and metadata extractor"
license = "MIT"
edition = "2024"
repository = "https://github.com/pathawks/retrospector"
readme = "readme.markdown"
keywords = ["rom", "checksum", "retro", "emulation", "verification"]
categories = ["command-line-utilities", "games"]

[dependencies]
byte-unit = "5.2.0"
byteorder = "1.5.0"
crc = "3.4.0"
encoding_rs = "0.8.35"
rcue = "0.1.3"
md-5 = "0.11.0"
sha1 = "0.11.0"
sha2 = "0.11.0"
clap = { version = "4", features = ["derive"] }
unicode-normalization = "0.1.25"

[profile.release]
overflow-checks = true
